# CNN-in-C

./: .gitignore  CMakeLists.txt  cnn.c  cnn.h  cnn_test.c  cnn_test.h  cnn_test_data.h  cnn_test_networks.c  cnn_test_networks.h  main.c  mtcnn.c  mtcnn.h  mtcnn_test.c  mtcnn_test.h  mtcnn_test_data.h  pnet.c  pnet.h  pnet_test.c  pnet_test_data.h  rnet_test.c  rnet_test.h  rnet_test_data.h
models/: lite_face.c  mtcnn.c
models/include/: lite_face.h
src/: cnn.c
src/include/: cnn.h
tests/: cnn_test.c  cnn_test_networks.c  lite_face_test.c  pnet_test.c
tests/include/: cnn_test.h  cnn_test_networks.h  lite_face_test.h  lite_face_test_data.h  pnet_test.h  pnet_test_data.h
